@@ -1,6 +1,7 @@
 1682.	[placeholder]	rt5066a
 
-1681.	[placeholder]	rt11742
+1681.	[bug]		Only set SO_REUSEADDR when a port is specified in
+			isc_socket_bind(). [RT #11742]
 
 1680.	[placeholder]	rt11697
 
